# FinSight-transactions

./: .dockerignore  .env.dist  .env.local.dist  .env.prod.dist  .gitignore  Makefile  README.md  config.yml  go.mod  go.sum  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yaml  ci.yml  code_quality.yml  deploy.yml  security.yaml
cmd/api/: main.go
cmd/transactions/: main.go
docker/local/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
env_files/: .env.local.dist
internal/access/: policy.go
internal/bootstrap/: app.go  config.go  database.go  logging.go
internal/config/: config.go
internal/database/: connector.go
internal/domain/: detailing.go  errors.go  params.go  recurring_transaction.go  repository.go  response.go  transaction.go
internal/errormapper/: error_mapper.go  gorm.go  postgres.go
internal/handler/: transaction.go
internal/logging/: factory.go  logging.go  zap.go
internal/repository/: detailing.go  repository.go  source_of_income.go  transaction.go  workout.go
internal/usecase/: detailing.go  transaction.go  workout.go
migrations/: 20250528182140_create_tables.sql  20250819184524_added_source_of_income_model.sql  20250824172124_add_made_at_to_transactions.sql  20250824200142_add_default_to_transactions_note.sql  20250826185808_create_finance_detailing_table.sql  20250827180010_allow_null_category_for_transactions_table.sql  20250827180917_alter_finance_detailing_date_columns.sql  alembic.ini  env.py
pkg/models/: source_of_income.go  (+4 more)
settings/: .env.local.dist  .env.prod.dist  config.yml
(+55 files in other folders)
